tests/e2e/semantics/break_outside2.story
while true
    a = 1
break
